--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
   <body>
     <h3>Hobbies</h3>
     <ol>
-      <li><a href="www.deftones.com>">Muzic</a></li>
+      <li><a href="www.deftones.com>">Music</a></li>
       <li>My pet</li>
       <li><a href="https://en.wikipedia.org/wiki/Bali">Travel</a></li>
     </ol>
